resource-quota/task21/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: go-ingress-clusterip
  namespace: practice-f-sadatov
spec:
  ingressClassName: nginx
  rules:
  - host: go-f-sadatov.sts404.uz
    http:
      paths:
      - backend:
          service:
            name: go-docker
            port:
              number: 80
        path: /
        pathType: Exact
status:
  loadBalancer: {}
